--- a/lyrical-graphql/package.json
+++ b/lyrical-graphql/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.7.2",
     "apollo-client": "^0.8.1",
     "axios": "^0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
